--- a/.github/workflows/generate_gifs.yml
+++ b/.github/workflows/generate_gifs.yml
@@ -4,13 +4,13 @@ name: Generate Video GIFs for README
 
 # Controls when the action will run.
 # It triggers on a push event to the 'main' branch,
-# but ONLY if files in 'media/videos/tests/' were changed.
+# but ONLY if files in 'media/videos/tests/1080p60/' were changed.
 on:
   push:
     branches:
       - main
     paths:
-      - 'media/videos/tests/**.mp4'
+      - 'media/videos/tests/1080p60/**.mp4'
 
 jobs:
   build_gifs:
@@ -31,8 +31,8 @@ jobs:
       - name: Generate GIFs and Update README
         run: |
           # Define the source and output directories
-          VIDEO_DIR="media/videos/tests"
-          GIF_DIR="media/videos/tests/gifs" # We'll create a dedicated subfolder for GIFs
+          VIDEO_DIR="media/videos/tests/1080p60"
+          GIF_DIR="media/videos/tests/1080p60/gifs" # We'll create a dedicated subfolder for GIFs
           README_FILE="README.md"
 
           # Create the GIF output directory if it doesn't exist
@@ -75,7 +75,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'actions@github.com'
-          git add media/videos/tests/gifs/*
+          git add media/videos/tests/1080p60/gifs/*
           git add README.md
           # Check if there are any changes to commit
           if ! git diff --staged --quiet; then
